--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -3,7 +3,7 @@
 }
 
 .experience-content {
-  width: 90%;
+  width: 60%;
   max-width: 1100px;
   margin: 0 auto;
 }
@@ -91,7 +91,7 @@
 
 .experience-product-image {
   display: flex;
-  justify-content: left;
+  justify-content: center;
   align-items: center;
   height: 100%;
 }
