--- a/src/components/Experience.css
+++ b/src/components/Experience.css
@@ -3,9 +3,9 @@
 }
 
 .experience-content {
-  width: 70%;
-  max-width: 1100px;
+  width: min(80%, 1100px);
   margin: 0 auto;
+  padding: 0 16px;
 }
 
 .experience-title {
@@ -161,8 +161,7 @@
 /* Responsive adjustments */
 @media (max-width: 900px) {
   .experience-content {
-    width: 98%;
-    max-width: 98vw;
+    width: 95%;
   }
   .experience-container {
     flex-direction: column;
